k8s/nginx-www.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nginx
          image: registry.gitlab.com/libreborme/libreborme/nginx:staging
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
      imagePullSecrets:
        - name: regcred
#         volumeMounts:
#           - name: "config"
#             mountPath: "/etc/nginx"
#     volumes:
#       - name: config
#         configMap:
#           name: nginx-conf
