k8s/elasticsearch.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:5.6.9
          ports:
            - containerPort: 9200
#         volumeMounts:
#           - mountPath: /usr/share/elasticsearch/data
#             name: es-data
#     volumes:
#       - name: es-data
#         persistentVolumeClaim:
#           claimName: elasticsearch-pv-claim
