k8s/libreborme-www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreborme
  labels:
    app: libreborme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreborme
  template:
    metadata:
      labels:
        app: libreborme
    spec:
      containers:
        - name: libreborme
          image: registry.gitlab.com/libreborme/libreborme:login_users
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred

---

kind: Service
apiVersion: v1
metadata:
  name: libreborme
spec:
  selector:
    app: libreborme
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
