k8s/postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.5
          ports:
            - containerPort: 5432
#         volumeMounts:
#           - name: tz-config
#             mountPath: /etc/localtime
#           - mountPath: /var/lib/postgresql/data
#             name: postgres-data
#     volumes:
#       - name: tz-config
#         hostPath:
#           path: /usr/share/zoneinfo/Europe/Madrid
#       - name: postgres-data
#         persistentVolumeClaim:
#           claimName: postgres-pv-claim
