k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: libreborme
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    # not working ;/
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8

    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: 'true'

spec:
#  tls:
#    - hosts:
#        - staging.ingress.librebor.me
#        - beta.ingress.librebor.me
#      secretName: tls-secret
  rules:
    - host: staging.ingress.librebor.me
      http:
        paths:
          - path: /
            backend:
              serviceName: libreborme-nginx
              servicePort: 80
